<resources>
    <string name="app_name">FirebaseLearn</string>
    <string name="login">Login</string>
    <string name="enter_password">enter password</string>
    <string name="enter_email">enter email</string>
    <string name="registration">Registration</string>
    <string name="back">Back to main</string>
    <string name="header_login_text">Login page</string>
    <string name="header_register_text">Register page</string>
    <string name="welcome_message">Welcome, anon</string>
    <string name="alert_pull_fields">Fill in all the fields!</string>
    <string name="alert_auth_server_trouble">Problem with the authorization server!</string>
    <string name="alert_pass_length">Password must contain at least 6 characters!</string>
</resources>