<?xml version="1.0" encoding="utf-8"?>
<layout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="by.godevelopment.firebaselearn.ui.main.MainViewModel" />
        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:id="@+id/hello_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="3dp"
        tools:context=".presentation.ui.home.HomeFragment"
        android:orientation="vertical"
        >

        <ProgressBar
            android:id="@+id/prog_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/helloMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:text="@string/header_login_text"
            tools:text="Login"
            />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@={viewModel.email}"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/user_password"
            tools:text="Enter email"
            />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@={viewModel.password}"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            tools:text="Enter password"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="@{viewModel.isEnableBtnLogin}"
            android:onClick="@{() -> viewModel.onClickLogin()}"
            android:text="@string/login"
            tools:text="Login"
            />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="@{() -> viewModel.onClickReg()}"
            android:text="@string/registration"
            tools:text="Registration"
            />

    </LinearLayout>
</layout>